==> ms-rtos/bspstm32f4xx/src/driver/stm32_drv_gpio.c <==
#define __MS_IO
#include "ms_config.h"
#include "ms_rtos.h"
#include "ms_io_core.h"
#include <string.h>
#include "includes.h"
#define GPIO_NUMBER                             16
#define IS_GPIO_ALL_PIN(PIN)                    (((PIN) == GPIO_PIN_0)  || \
                                                 ((PIN) == GPIO_PIN_1)  || \
                                                 ((PIN) == GPIO_PIN_2)  || \
                                                 ((PIN) == GPIO_PIN_3)  || \
                                                 ((PIN) == GPIO_PIN_4)  || \
                                                 ((PIN) == GPIO_PIN_5)  || \
                                                 ((PIN) == GPIO_PIN_6)  || \
                                                 ((PIN) == GPIO_PIN_7)  || \
                                                 ((PIN) == GPIO_PIN_8)  || \
                                                 ((PIN) == GPIO_PIN_9)  || \
                                                 ((PIN) == GPIO_PIN_10) || \
                                                 ((PIN) == GPIO_PIN_11) || \
                                                 ((PIN) == GPIO_PIN_12) || \
                                                 ((PIN) == GPIO_PIN_13) || \
                                                 ((PIN) == GPIO_PIN_14) || \
                                                 ((PIN) == GPIO_PIN_15))

static int __stm32_gpio_open(ms_ptr_t ctx, ms_io_file_t *file, int oflag, ms_mode_t mode)
{
    int ret;

    if (ms_atomic_inc(MS_IO_DEV_REF(file)) == 1) {
        ret = 0;

    } else {
        ms_atomic_dec(MS_IO_DEV_REF(file));
        ms_thread_set_errno(EBUSY);
        ret = -1;
    }

    return ret;
}

static int __stm32_gpio_close(ms_ptr_t ctx, ms_io_file_t *file)
{
    privinfo_t *priv = ctx;
    ms_uint16_t pin = priv->pin;
    GPIO_TypeDef *gpio_x = (GPIO_TypeDef *)priv->base;

    if (ms_atomic_dec(MS_IO_DEV_REF(file)) == 0) {
        HAL_GPIO_DeInit(gpio_x, pin);
    }

    return 0;
}

static ms_ssize_t __stm32_gpio_read(ms_ptr_t ctx, ms_io_file_t *file, ms_ptr_t buf, ms_size_t len)
{
    privinfo_t *priv = ctx;
    ms_uint16_t pin = priv->pin;
    GPIO_TypeDef *gpio_x = (GPIO_TypeDef *)priv->base;
    GPIO_PinState state;
    ms_uint8_t *value = (ms_uint8_t *)buf;

    state = HAL_GPIO_ReadPin(gpio_x, pin);
    *value = (state == GPIO_PIN_RESET) ? 0 : 1;

    return sizeof(ms_uint8_t);
}

static ms_ssize_t __stm32_gpio_write(ms_ptr_t ctx, ms_io_file_t *file, ms_const_ptr_t buf, ms_size_t len)
{
    privinfo_t *priv = ctx;
    ms_uint16_t pin = priv->pin;
    GPIO_TypeDef *gpio_x = (GPIO_TypeDef *)priv->base;
    GPIO_PinState state;

    state = (*(ms_uint8_t *)buf) ? GPIO_PIN_SET : GPIO_PIN_RESET;
    HAL_GPIO_WritePin(gpio_x, pin, state);

    return sizeof(ms_uint8_t);
}

static int __stm32_gpio_ioctl(ms_ptr_t ctx, ms_io_file_t *file, int cmd, void *arg)
{
    privinfo_t *priv = ctx;
    ms_uint16_t pin = priv->pin;
    GPIO_TypeDef *gpio_x = (GPIO_TypeDef *)priv->base;
    GPIO_InitTypeDef init;
    ms_gpio_param_t *param;
    int ret;

    switch (cmd) {

    case MS_GPIO_CMD_SET_PARAM:
        if (ms_access_ok(arg, sizeof(ms_gpio_param_t), MS_ACCESS_R)) {
            param = (ms_gpio_param_t *)arg;

            bzero(&init, sizeof(GPIO_InitTypeDef));

            init.Pin = pin;
            if (__stm32_gpio_param_to_hal_param(param, &init) == MS_ERR_NONE) {
                HAL_GPIO_Init(gpio_x, &init);

                if (IS_GPIO_EXTI_MODE(init.Mode)) {
                    ms_uint8_t pos = __stm32_gpio_pin_to_pos(pin);

                    gpio_exti_line_priv[pos] = priv;

                    HAL_NVIC_SetPriority(gpio_exti_line_irqn[pos], 0x0F, 0x00);
                    HAL_NVIC_EnableIRQ(gpio_exti_line_irqn[pos]);
                }

                /*
                 * Save param in priv
                 */
                priv->mode  = param->mode;
                priv->pull  = param->pull;
                priv->speed = param->speed;

                ret = 0;
            } else {
                ms_thread_set_errno(EINVAL);
                ret = -1;
            }
        } else {
            ms_thread_set_errno(EFAULT);
            ret = -1;
        }
        break;

    case MS_GPIO_CMD_GET_PARAM:
        if (ms_access_ok(arg, sizeof(ms_gpio_param_t), MS_ACCESS_W)) {
            param = (ms_gpio_param_t *)arg;
            param->mode  = priv->mode;
            param->pull  = priv->pull;
            param->speed = priv->speed;
            ret = 0;
        } else {
            ms_thread_set_errno(EFAULT);
            ret = -1;
        }
        break;

    default:
        ms_thread_set_errno(EINVAL);
        ret = -1;
        break;
    }

    return ret;
}

void EXTI0_IRQHandler(void)
{
    (void)ms_int_enter();

    HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_0);

    (void)ms_int_exit();
}

void EXTI1_IRQHandler(void)
{
    (void)ms_int_enter();

    HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_1);

    (void)ms_int_exit();
}

void EXTI2_IRQHandler(void)
{
    (void)ms_int_enter();

    HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_2);

    (void)ms_int_exit();
}

void EXTI3_IRQHandler(void)
{
    (void)ms_int_enter();

    HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_3);

    (void)ms_int_exit();
}

void EXTI4_IRQHandler(void)
{
    (void)ms_int_enter();

    HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_4);

    (void)ms_int_exit();
}

void EXTI9_5_IRQHandler(void)
{
    (void)ms_int_enter();

    if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_9) != RESET) {
        HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_9);
    }

    if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_8) != RESET) {
        HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_8);
    }

    if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_7) != RESET) {
        HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_7);
    }

    if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_6) != RESET) {
        HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_6);
    }

    if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_5) != RESET) {
        HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_5);
    }

    (void)ms_int_exit();
}

void EXTI15_10_IRQHandler(void)
{
    (void)ms_int_enter();

    if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_15) != RESET) {
        HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_15);
    }

    if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_14) != RESET) {
        HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_14);
    }

    if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_13) != RESET) {
        HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_13);
    }

    if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_12) != RESET) {
        HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_12);
    }

    if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_11) != RESET) {
        HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_11);
    }

    if (__HAL_GPIO_EXTI_GET_IT(GPIO_PIN_10) != RESET) {
        HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_10);
    }

    (void)ms_int_exit();
}
